crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__non_identifier_relation_names_snapshot@non_identifier_relation_names_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class x1users(models.Model):
    _1id = models.IntegerField(db_column="1id", primary_key=True)
    email = models.TextField()

    class Meta:
        managed = False
        db_table = "1users"

class Posts(models.Model):
    id = models.IntegerField(primary_key=True)
    _1st_owner = models.ForeignKey("x1users", on_delete=models.RESTRICT, db_column="1st_owner_id", related_name="+", null=True, blank=True)
    _2nd_owner = models.ForeignKey("x1users", on_delete=models.RESTRICT, db_column="2nd_owner_id", related_name="+", null=True, blank=True)

    class Meta:
        managed = False
        db_table = "posts"
