crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__non_identifier_relation_names_snapshot@non_identifier_relation_names_SqlAlchemy.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from typing import Optional

from sqlalchemy import ForeignKey, Integer, Text
from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column


class _1users(DeclarativeBase):
    __tablename__ = "1users"

    _1id: Mapped[int] = mapped_column("1id", Integer, primary_key=True)
    email: Mapped[str] = mapped_column(Text, nullable=False)

class Posts(DeclarativeBase):
    __tablename__ = "posts"

    id: Mapped[int] = mapped_column(Integer, primary_key=True)
    _1st_owner_id: Mapped[Optional[int]] = mapped_column("1st_owner_id", Integer, ForeignKey("1users.1id"), nullable=True)
    _2nd_owner_id: Mapped[Optional[int]] = mapped_column("2nd_owner_id", Integer, ForeignKey("1users.1id"), nullable=True)
